fix: make code more readable

--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -74,6 +74,7 @@ input[type=checkbox] {
     display: flex;
 }
 
+/* Nav right items */
 .nav-links>span:nth-child(-n+5) {
     margin-right: 1vw;
     padding: 1rem 1.6rem;
@@ -98,6 +99,7 @@ input[type=checkbox] {
     width: 108%;
 }
 
+/* upper nav links */
 .nav-links>span:nth-child(-n+5)>a {
     font-size: 1.2rem;
     margin-bottom: 4px;
@@ -109,6 +111,7 @@ input[type=checkbox] {
     cursor: pointer;
 }
 
+/* lower nav links */
 .nav-links>span:nth-child(-n+5)>div>a {
     display: inline-block;
 }
@@ -127,6 +130,7 @@ input[type=checkbox] {
     left: 2.3rem;
 }
 
+/* make text thinner */
 .nav-links>span:nth-child(-n+5)>div>a,
 .logo>p:nth-child(2),
 .hero--small_text,
@@ -262,27 +266,31 @@ input[type=checkbox] {
         transition: all 0.4s;
     }
 
-    /* hamburger hover effect */
-    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(1) {
+    /* hamburger hover/focus effect - when checkbox is on hover/focus state */
+    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(1),
+    input[type=checkbox]:focus~.hamburger-wrapper>span:nth-child(1) {
         transform: translateY(-2px);
         background: #b84642;
     }
 
-    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(3) {
+    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(3),
+    input[type=checkbox]:focus~.hamburger-wrapper>span:nth-child(3) {
         transform: translateY(2px);
     }
 
-    /* hamburger hover effect when it has been clicked ----- Used to fix 
-    disparity when hambuger is clicked but the hover state is still on the hidden checkbox */
-    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(1) {
+    /* hamburger hover/focus rotate (X) effect when it has been clicked ----- Used to fix 
+    disparity when hambuger is clicked but the hover/focus state is still on the hidden checkbox */
+    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(1),
+    input[type=checkbox]:checked:focus~.hamburger-wrapper>span:nth-child(1) {
         transform: translateY(10px) translateX(0) rotate(45deg);
     }
 
-    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(3) {
+    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(3),
+    input[type=checkbox]:checked:focus~.hamburger-wrapper>span:nth-child(3) {
         transform: translateY(-6px) translateX(0) rotate(-45deg);
     }
 
-    /* toggle rotate effect */
+    /* toggle hamburger rotate (X) effect when clicked*/
     input[type=checkbox]:checked~.hamburger-wrapper :nth-child(1) {
         transform: translateY(10px) translateX(0) rotate(45deg);
         background: #b84642;
